# polyglot-functions

./: .graphqlrc.js  LICENSE.md  README.md  mock-input-data.mjs  package.json  test-all-functions.js  validate-function-output.js
app/: package.json  shopify.app.toml  test-all-functions.js  validate-function-output.js
app/extensions/order-discount-rust/: Cargo.toml
app/extensions/order-discount-rust/src/: main.rs
app/inputs/: input.json
docs/: index.html
docs/scripts/: main.js
docs/styles/: main.css
extensions/order-discount-assemblyscript/: README.md  asconfig.json  build.sh  input.json  package.json  run-local.sh  schema.graphql  shopify.function.extension.toml
extensions/order-discount-cpp/: README.md  build.sh  input.graphql  run-local.sh  shopify.function.extension.toml
extensions/order-discount-golang/: .gitignore  README.md  build.sh  genqlient.yaml  go.mod  go.sum  input.json  run-local.sh  schema.graphql  shopify.function.extension.toml
extensions/order-discount-grain/: .gitignore  README.md  build.sh  input.graphql  shopify.function.extension.toml
extensions/order-discount-javascript/: package.json
extensions/order-discount-rust/: .gitignore  Cargo.toml  README.md  input.graphql  input.json  output.graphql  run-local.sh  shopify.function.extension.toml
extensions/order-discount-rust/src/: api.rs  main.rs
extensions/volume-discount/: Cargo.toml  README.md  shopify.function.extension.toml
extensions/volume-discount/src/: main.rs
web/: babel.config.js  index.js  package.json
web/discounts/: metafields.js  (+1 more)
workshop/: .gitignore
(+121 files in other folders)
