[package]
name = "order-discount-rust"
version = "1.0.0"
edition = "2021"

[dependencies]
shopify_function = "0.1.0"
serde = { version = "1.0.13", features = ["derive"] }
serde_with = "1.13.0"
serde_json = "1.0"
graphql_client = { git = "https://github.com/graphql-rust/graphql-client" }

[profile.release]
lto = true
opt-level = 'z'
strip = true
