[package]
name = "volume-discount"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.13", features = ["derive"] }
serde_with = "1.13.0"
serde_json = "1.0"
shopify_function = "0.2.2"
graphql_client = { git = "https://github.com/graphql-rust/graphql-client", version = "0.11.0" }

[profile.release]
lto = true
opt-level = 'z'
strip = true
